# contas-municipais

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/contas_municipais/: __init__.py  base.py
src/contas_municipais/municipalities/: __init__.py
src/contas_municipais/municipalities/lousada/: __init__.py  y2012.py  y2013.py  y2014.py  y2015.py  y2016.py  y2017.py  y2018.py  y2019.py  y2020.py  y2021.py  y2022.py  y2023.py  y2024.py
src/contas_municipais/pocal/: __init__.py  categories.py
src/contas_municipais/sncap/: __init__.py  categories.py
tests/: test_base.py
